--- a/package.json
+++ b/package.json
@@ -18,21 +18,25 @@
         "analyze": "npx vite-bundle-visualizer"
     },
     "dependencyComments": {
-        "@react-pft/renderer": "12.12.24: There's an issue with how we built the PDF viewing and newer versions seems to crash the viewing. Keep the version for now. Also, we're discussing moving away from PDF and show a print friendly version istead."
+        "@react-pft/renderer": "12.12.24: There's an issue with how we built the PDF viewing and newer versions seems to crash the viewing. Keep the version for now. Also, we're discussing moving away from PDF and show a print friendly version istead.",
+        "eslint-config-prettier": "Holder på versjon 9.1.0 --> 10.0.1",
+        "vitest": "2.1.8 --> 3.0.5",
+        "Alle react-komponenter": "Holdes på versjon 18xx",
+        "types/node": "Holdes på lavere versjon 20.14.10 --> 22.13.1"
     },
     "dependencies": {
-        "@grafana/faro-web-sdk": "1.12.2",
-        "@grafana/faro-web-tracing": "1.12.2",
-        "@navikt/aksel-icons": "7.8.0",
+        "@grafana/faro-web-sdk": "1.13.3",
+        "@grafana/faro-web-tracing": "1.13.3",
+        "@navikt/aksel-icons": "7.12.2",
         "@navikt/arbeidsforhold": "4.1.3",
-        "@navikt/ds-css": "7.8.0",
-        "@navikt/ds-react": "7.8.0",
+        "@navikt/ds-css": "7.12.2",
+        "@navikt/ds-react": "7.12.2",
         "@navikt/fnrvalidator": "2.1.5",
-        "@navikt/nav-dekoratoren-moduler": "3.1.0",
+        "@navikt/nav-dekoratoren-moduler": "3.2.2",
         "@navikt/nav-office-reception-info": "1.2.0",
         "@react-pdf/renderer": "3.4.4",
         "buffer": "6.0.3",
-        "core-js": "3.39.0",
+        "core-js": "3.40.0",
         "dayjs": "1.11.13",
         "file-saver": "2.0.5",
         "ibantools": "4.5.1",
@@ -45,19 +49,19 @@
         "npm-run-all": "4.1.5",
         "react": "18.3.1",
         "react-collapse": "5.1.1",
-        "react-day-picker": "9.4.3",
+        "react-day-picker": "9.5.1",
         "react-dom": "18.3.1",
-        "react-hook-form": "7.54.0",
-        "react-intl": "7.0.4",
-        "react-modal": "3.16.1",
-        "react-router-dom": "7.0.2",
-        "react-select": "5.9.0"
+        "react-hook-form": "7.54.2",
+        "react-intl": "7.1.6",
+        "react-modal": "3.16.3",
+        "react-router-dom": "7.1.5",
+        "react-select": "5.10.0"
     },
     "devDependencies": {
         "@testing-library/dom": "10.4.0",
         "@testing-library/jest-dom": "6.6.3",
-        "@testing-library/react": "16.1.0",
-        "@testing-library/user-event": "14.5.2",
+        "@testing-library/react": "16.2.0",
+        "@testing-library/user-event": "14.6.1",
         "@types/fetch-mock": "7.3.8",
         "@types/file-saver": "2.0.7",
         "@types/js-cookie": "3.0.6",
@@ -71,28 +75,28 @@
         "@types/react-router-dom": "5.3.3",
         "@types/react-select": "5.0.1",
         "@types/react-test-renderer": "18.3.0",
-        "@typescript-eslint/eslint-plugin": "8.18.0",
-        "@typescript-eslint/parser": "8.18.0",
+        "@typescript-eslint/eslint-plugin": "8.24.0",
+        "@typescript-eslint/parser": "8.24.0",
         "@vitejs/plugin-react": "4.3.4",
         "classnames": "2.5.1",
-        "eslint": "9.16.0",
+        "eslint": "9.20.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-css-modules": "2.12.0",
         "eslint-plugin-jsx-a11y": "6.10.2",
-        "eslint-plugin-react": "7.37.2",
-        "fetch-mock": "12.2.0",
-        "less": "4.2.0",
+        "eslint-plugin-react": "7.37.4",
+        "fetch-mock": "12.3.0",
+        "less": "4.2.2",
         "less-plugin-npm-import": "2.1.0",
         "less-watch-compiler": "1.16.3",
-        "prettier": "3.4.2",
+        "prettier": "3.5.0",
         "react-test-renderer": "18.3.1",
         "source-map-explorer": "2.5.3",
-        "typescript": "5.7.2",
-        "vite": "6.0.3",
-        "vite-plugin-node-polyfills": "0.22.0",
+        "typescript": "5.7.3",
+        "vite": "6.1.0",
+        "vite-plugin-node-polyfills": "0.23.0",
         "vite-tsconfig-paths": "5.1.4",
         "vitest": "2.1.8",
-        "vitest-fetch-mock": "0.4.2"
+        "vitest-fetch-mock": "0.4.3"
     },
     "overrides": {
         "vite-plugin-node-polyfills": {
