--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    if: github.event.release.target_commitish == 'master'
+    if: github.event.release.target_commitish == 'main'
     uses: ./.github/workflows/build-and-deploy.yml
     permissions:
       contents: 'read'
