--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -114,7 +114,7 @@ jobs:
         run: npm run build
       - name: Upload assets to CDN
         id: upload
-        uses: nais/deploy/actions/cdn-upload/v2@main
+        uses: nais/deploy/actions/cdn-upload/v2@master
         with:
           team: personbruker
           source: ./build
