--- a/package.json
+++ b/package.json
@@ -18,47 +18,52 @@
         "analyze": "npx vite-bundle-visualizer"
     },
     "dependencyComments": {
-        "@react-pft/renderer": "12.12.24: There's an issue with how we built the PDF viewing and newer versions seems to crash the viewing. Keep the version for now. Also, we're discussing moving away from PDF and show a print friendly version istead."
+        "@react-pdf/renderer": "12.12.24: There's an issue with how we built the PDF viewing and newer versions seems to crash the viewing. Keep the version for now. Also, we're discussing moving away from PDF and show a print friendly version istead. 3.4.4 --> 4.3.0",
+        "react": "Holdes på versjon 18.3.1 --> 19.0.0",
+        "react-dom": "Holdes på versjon 18.3.1 --> 19.0.0",
+        "@types/node": "Holdes på versjon 20.14.10 --> 22.13.9",
+        "@types/react": "Holdes på versjon 18.3.7 --> 19.0.10",
+        "@types/react-dom": "Holdes på 18.3.0 --> 19.0.4",
+        "@types/react-test-renderer": "Holdes på 18.3.0 --> 19.0.0"
     },
     "dependencies": {
-        "@grafana/faro-web-sdk": "1.12.2",
-        "@grafana/faro-web-tracing": "1.12.2",
-        "@navikt/aksel-icons": "7.8.0",
+        "@grafana/faro-web-sdk": "1.14.1",
+        "@grafana/faro-web-tracing": "1.14.1",
+        "@navikt/aksel-icons": "7.17.1",
         "@navikt/arbeidsforhold": "4.1.3",
-        "@navikt/ds-css": "7.8.0",
-        "@navikt/ds-react": "7.8.0",
+        "@navikt/ds-css": "7.17.1",
+        "@navikt/ds-react": "7.17.1",
         "@navikt/fnrvalidator": "2.1.5",
-        "@navikt/nav-dekoratoren-moduler": "3.1.0",
+        "@navikt/nav-dekoratoren-moduler": "3.2.2",
         "@navikt/nav-office-reception-info": "1.2.0",
         "@react-pdf/renderer": "3.4.4",
         "buffer": "6.0.3",
-        "core-js": "3.39.0",
+        "core-js": "3.41.0",
         "dayjs": "1.11.13",
         "file-saver": "2.0.5",
         "ibantools": "4.5.1",
         "intl": "1.2.5",
         "js-cookie": "3.0.5",
-        "jsdom": "25.0.1",
+        "jsdom": "26.0.0",
         "lodash.throttle": "4.1.1",
         "node-cache": "5.1.2",
         "node-fetch": "3.3.2",
         "npm-run-all": "4.1.5",
         "react": "18.3.1",
         "react-collapse": "5.1.1",
-        "react-day-picker": "9.4.3",
+        "react-day-picker": "9.5.1",
         "react-dom": "18.3.1",
-        "react-hook-form": "7.54.0",
-        "react-intl": "7.0.4",
-        "react-modal": "3.16.1",
-        "react-router-dom": "7.0.2",
-        "react-select": "5.9.0"
+        "react-hook-form": "7.54.2",
+        "react-intl": "7.1.6",
+        "react-modal": "3.16.3",
+        "react-router-dom": "7.3.0",
+        "react-select": "5.10.1"
     },
     "devDependencies": {
         "@testing-library/dom": "10.4.0",
         "@testing-library/jest-dom": "6.6.3",
-        "@testing-library/react": "16.1.0",
-        "@testing-library/user-event": "14.5.2",
-        "@types/fetch-mock": "7.3.8",
+        "@testing-library/react": "16.2.0",
+        "@testing-library/user-event": "14.6.1",
         "@types/file-saver": "2.0.7",
         "@types/js-cookie": "3.0.6",
         "@types/jsdom": "21.1.7",
@@ -71,28 +76,28 @@
         "@types/react-router-dom": "5.3.3",
         "@types/react-select": "5.0.1",
         "@types/react-test-renderer": "18.3.0",
-        "@typescript-eslint/eslint-plugin": "8.18.0",
-        "@typescript-eslint/parser": "8.18.0",
+        "@typescript-eslint/eslint-plugin": "8.26.0",
+        "@typescript-eslint/parser": "8.26.0",
         "@vitejs/plugin-react": "4.3.4",
         "classnames": "2.5.1",
-        "eslint": "9.16.0",
-        "eslint-config-prettier": "9.1.0",
+        "eslint": "9.21.0",
+        "eslint-config-prettier": "10.1.1",
         "eslint-plugin-css-modules": "2.12.0",
         "eslint-plugin-jsx-a11y": "6.10.2",
-        "eslint-plugin-react": "7.37.2",
-        "fetch-mock": "12.2.0",
-        "less": "4.2.0",
+        "eslint-plugin-react": "7.37.4",
+        "fetch-mock": "12.5.2",
+        "less": "4.2.2",
         "less-plugin-npm-import": "2.1.0",
         "less-watch-compiler": "1.16.3",
-        "prettier": "3.4.2",
+        "prettier": "3.5.3",
         "react-test-renderer": "18.3.1",
         "source-map-explorer": "2.5.3",
-        "typescript": "5.7.2",
-        "vite": "6.0.3",
-        "vite-plugin-node-polyfills": "0.22.0",
+        "typescript": "5.8.2",
+        "vite": "6.2.1",
+        "vite-plugin-node-polyfills": "0.23.0",
         "vite-tsconfig-paths": "5.1.4",
-        "vitest": "2.1.8",
-        "vitest-fetch-mock": "0.4.2"
+        "vitest": "3.0.8",
+        "vitest-fetch-mock": "0.4.5"
     },
     "overrides": {
         "vite-plugin-node-polyfills": {
