Splitter endepunkt for endre-kontonummer og bruker nytt api i dev.

--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -17,7 +17,8 @@ jobs:
       VITE_PDL_URL: 'https://www.intern.dev.nav.no/person/pdl-fullmakt-ui'
       VITE_SKJERMING_URL: 'https://skjerming-ui.intern.dev.nav.no/person/personopplysninger/skjerming'
       VITE_APP_URL: 'https://www.ansatt.dev.nav.no/person/personopplysninger'
-      VITE_API_URL: 'https://www.ansatt.dev.nav.no/person/personopplysninger-api'
+      VITE_API_URL: 'https://www.ansatt.dev.nav.no/tms-personopplysninger-api'
+      VITE_ENDRE_KONTONUMMER_URL: 'https://www.ansatt.dev.nav.no/person/personopplysninger-api'
       VITE_DSOP_URL: 'https://www.ansatt.dev.nav.no/person/dsop-api'
       VITE_UTBETALINGSOVERSIKT_URL: 'https://www.intern.dev.nav.no/utbetalingsoversikt/'
       VITE_SYKEFRAVAER_URL: 'https://www.ekstern.dev.nav.no/syk/sykefravaer'
