--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -29,6 +29,9 @@ on:
       VITE_API_URL:
         required: true
         type: string
+      VITE_ENDRE_KONTONUMMER_URL:
+        required: true
+        type: string
       VITE_DSOP_URL:
         required: true
         type: string
@@ -96,6 +99,7 @@ jobs:
           echo "VITE_SKJERMING_URL=${{ inputs.VITE_SKJERMING_URL }}" >> $GITHUB_ENV
           echo "VITE_APP_URL=${{ inputs.VITE_APP_URL }}" >> $GITHUB_ENV
           echo "VITE_API_URL=${{ inputs.VITE_API_URL }}" >> $GITHUB_ENV
+          echo "VITE_ENDRE_KONTONUMMER_URL=${{ inputs.VITE_ENDRE_KONTONUMMER_URL }}" >> $GITHUB_ENV
           echo "VITE_DSOP_URL=${{ inputs.VITE_DSOP_URL }}" >> $GITHUB_ENV
           echo "VITE_LOGIN_URL=${{ inputs.VITE_LOGIN_URL }}" >> $GITHUB_ENV
           echo "VITE_DITT_NAV_URL=${{ inputs.VITE_DITT_NAV_URL }}" >> $GITHUB_ENV
