Bruker nye endepunkt i intern-app.

--- a/.github/workflows/deploy.prod.intern.yml
+++ b/.github/workflows/deploy.prod.intern.yml
@@ -20,9 +20,9 @@ jobs:
       VITE_PDL_URL: 'https://www.nav.no/person/pdl-fullmakt-ui'
       VITE_SKJERMING_URL: 'https://www.nav.no/person/personopplysninger/skjerming'
       VITE_APP_URL: 'https://www.nav.no/person/personopplysninger'
-      VITE_API_URL: 'https://www.nav.no/person/personopplysninger-api'
+      VITE_API_URL: 'https://www.ansatt.nav.no/tms-personopplysninger-api'
       VITE_ENDRE_KONTONUMMER_URL: 'https://www.nav.no/person/personopplysninger-api'
-      VITE_DSOP_URL: 'https://www.nav.no/person/dsop-api'
+      VITE_DSOP_URL: 'https://www.ansatt.nav.no/tms-personopplysninger-api/sporingslogg'
       VITE_UTBETALINGSOVERSIKT_URL: 'https://tjenester.nav.no/utbetalingsoversikt'
       VITE_SYKEFRAVAER_URL: 'https://www.nav.no/syk/sykefravaer'
       VITE_LOGIN_URL: 'https://login.nav.no/oauth2/login'
