--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -19,7 +19,7 @@ jobs:
       VITE_APP_URL: 'https://www.ansatt.dev.nav.no/person/personopplysninger'
       VITE_API_URL: 'https://www.ansatt.dev.nav.no/tms-personopplysninger-api'
       VITE_ENDRE_KONTONUMMER_URL: 'https://www.ansatt.dev.nav.no/person/personopplysninger-api'
-      VITE_DSOP_URL: 'https://www.ansatt.dev.nav.no/person/dsop-api'
+      VITE_DSOP_URL: 'https://www.ansatt.dev.nav.no/tms-personopplysninger-api/sporingslogg'
       VITE_UTBETALINGSOVERSIKT_URL: 'https://www.intern.dev.nav.no/utbetalingsoversikt/'
       VITE_SYKEFRAVAER_URL: 'https://www.ekstern.dev.nav.no/syk/sykefravaer'
       VITE_LOGIN_URL: 'https://login.ekstern.dev.nav.no/oauth2/login'
