Reduser avhengighet mot personbruker

--- a/.github/workflows/build-and-deploy-intern.yml
+++ b/.github/workflows/build-and-deploy-intern.yml
@@ -133,7 +133,7 @@ jobs:
         uses: nais/docker-build-push@v0
         id: docker-push
         with:
-          team: personbruker
+          team: min-side
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           image_suffix: ${{ inputs.imageSuffix }}
