--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "@grafana/faro-web-sdk": "1.14.1",
         "@grafana/faro-web-tracing": "1.14.1",
         "@navikt/aksel-icons": "7.17.4",
-        "@navikt/arbeidsforhold": "4.1.3",
+        "@navikt/arbeidsforhold": "^4.3.0",
         "@navikt/ds-css": "7.17.4",
         "@navikt/ds-react": "7.17.4",
         "@navikt/fnrvalidator": "2.1.5",
@@ -68,7 +68,6 @@
         "@types/jsdom": "21.1.7",
         "@types/node": "22.15.3",
         "@types/node-fetch": "2.6.12",
-        "eslint-plugin-import": "2.31.0",
         "@types/react": "18.3.7",
         "@types/react-dom": "18.3.0",
         "@types/react-modal": "3.16.3",
@@ -82,6 +81,7 @@
         "eslint": "9.23.0",
         "eslint-config-prettier": "10.1.1",
         "eslint-plugin-css-modules": "2.12.0",
+        "eslint-plugin-import": "2.31.0",
         "eslint-plugin-jsx-a11y": "6.10.2",
         "eslint-plugin-react": "7.37.4",
         "fetch-mock": "12.5.2",
