--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "@grafana/faro-web-sdk": "1.14.1",
         "@grafana/faro-web-tracing": "1.14.1",
         "@navikt/aksel-icons": "7.17.4",
-        "@navikt/arbeidsforhold": "^4.3.0",
+        "@navikt/arbeidsforhold": "4.3.1",
         "@navikt/ds-css": "7.17.4",
         "@navikt/ds-react": "7.17.4",
         "@navikt/fnrvalidator": "2.1.5",
